12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2003.nn.nn):
=======================

- Applied patches:
   - iometer-2003.12.16-post.DS1-AlwaysSendCompletionQueue.patch
     by Daniel Scheibli (implements the code changes suggested by 
     Dough Haigh to solve the performance drop in network tests on
     Solaris - see bug report #881675).
   - iometer-1216.post.ds1.kstat-patch by Ming Zhang (major collective 
     patch which
     a.) introduces the iomtr_kstat kernel module for Linux 
     b.) adds support for parsing the Linux 2.4 and 2.6 style
         /proc/stat file - as suggested by Dmitry Yusupov
     c.) increases the block size detection for Linux as
         suggested by Dimtry Yusupov
     d.) enables TCP statistics for Linux
     e.) adds first suoport for the XScale processor)
   - iometer-2003.12.16-IoMtrGlobalDefines5.patch by Daniel Scheibli
     (introduces the IOMTR_SETTING_* global defines to include additional
     code like the VI stuff).
   - iometer-2003.12.16-SwitchesNowRequired.patch by Daniel Scheibli
     (code cleanup of the dynamo parameter handling; switches are no
     longer option but required now)
- Documentation:
   - Added first comments about the coding style to the Developers Guide.
- Others:
   - Added md5sum's for each package to the project homepage.
   - Extended the build environment with capabilities to handle Java.



ChangeLog (2003.12.16):
=======================

- Applied patches:
   - iometer-2003.05.10-IoMtrGlobalDefines4.patch by Daniel Scheibli
     (Last of the IOMTR_* global defines patches)
   - iometer_large_work_file.patch.txt by Russell Redd (fixes the GUI 
     to ensure that "Maximum Disk Size" values are handled propably)
   - iometer-2003.05.10-IoMtrGlobalDefines3.patch by Daniel Scheibli